--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ES6</title>
-    <script src="./dist/index.js"></script>
-    <script src="./dist/symbol.js"></script>
-    <script src="./dist/promise.js"></script>
-    <script src="./dist/class.js"></script>
-    <script src="./dist/moudle.js"></script>
+    <!-- <script src="./dist/index.js"></script> -->
+    <!-- <script src="./dist/symbol.js"></script> -->
+    <!-- <script src="./dist/promise.js"></script> -->
+    <!-- <script src="./dist/class.js"></script> -->
+    <!-- <script src="./dist/moudle.js"></script> -->
+    <script src="./dist/promise-use.js"></script>
 </head>
 <body>
     
